@@ -286,7 +286,7 @@ IATI出版社
 #amount_text
 总和
 
-#view_donor_activities_amount_text
+#view_activities_amount_text
 总和
 
 #donor_activities_spend_text
