@@ -286,13 +286,13 @@ End date
 #amount_text
 Amount
 
-#view_donor_activities_amount_text
+#view_activities_amount_text
 Total commitments and % used
 
-#donor_activities_spend_text
+#activities_spend_text
 Total commitments
 
-#donor_activities_percentage_tip_text
+#activities_percentage_tip_text
 Percentage of total commitments spent
 
 #view_donor_budgets_text
