@@ -286,7 +286,7 @@ Date de fin
 #amount_text
 Somme
 
-#view_donor_activities_amount_text
+#view_activities_amount_text
 Somme
 
 #donor_activities_spend_text
