@@ -286,7 +286,7 @@ IATI<br/>प्रकाशक
 #amount_text
 राशि
 
-#view_donor_activities_amount_text
+#view_activities_amount_text
 राशि
 
 #donor_activities_spend_text
