@@ -286,7 +286,7 @@ IATIパブリッシャ
 #amount_text
 合計
 
-#view_donor_activities_amount_text
+#view_activities_amount_text
 合計
 
 #donor_activities_spend_text
