@@ -286,7 +286,7 @@ Fecha de finalización
 #amount_text
 Cantidad
 
-#view_donor_activities_amount_text
+#view_activities_amount_text
 Cantidad
 
 #donor_activities_spend_text
