@@ -18,7 +18,7 @@
 	</table>
 	<div class="table_wrap">
 		<table class="activity">
-			{table_header_amount}
+			{table_activities_header_amount}
 			{list_activities_datas}
 		</table>
 		<div class="download_wrap"><a download="dportal_list_activities.csv" href="{list_activities_datas_csv}" class="csv_download">{download_csv_text}</a></div>
@@ -44,13 +44,23 @@
 <tr onclick="return ctrack.url('#view=act&aid={aid}');">
 	<td class="num">{num}.</td>
 	<td class="title">
-		<a>
+		<a class="percent">
 			{title}
 			<span>{reported_by_text}</span>
 		</a>
 	</td>
-	<td class="value">{commitment}<span>{currency}</span></td>
+	<td class="value">
+		<div class="activities_spend_wrap">
+			<div class="activities_spend" title="{activities_spend_text}">{commitment}<span>{currency}</span></div>
+			<div class="activities_barchart_wrap" title="{activities_percentage_tip_text}">
+				<div class="activities_percent_max">
+					<div style="width:{pct}px;" class="activities_percent"></div>
+				</div>
+			</div>
+		</div>
+	</td>
 </tr>
+
 
 #list_activities_head
 <div class="head_wrap">
