@@ -214,11 +214,11 @@
     <th class="titles">{amount_text}</th>
 </tr>
 
-#table_donor_activities_header_amount
+#table_activities_header_amount
 <tr>
     <th class="titles"></th>
     <th class="titles">{project_title_tip_text}</th>
-    <th class="titles">{view_donor_activities_amount_text}</th>
+    <th class="titles">{view_activities_amount_text}</th>
 </tr>
 
 #table_header_missing
