@@ -2,6 +2,9 @@ Development Portal (2017-09-04 shi)
 ==============================
 Fixed typo in view_countries.js
 Fixed link colour for search
+Fixed percentage views in *_activities.html
+Updated chunks with generalised name
+Updated translations
 
 
 Development Portal (2017-09-03 shi)
